refacto : fix animations on mobile and mediaQueries services previews

--- a/src/components/AppMain/stylesMediaQueries.scss
+++ b/src/components/AppMain/stylesMediaQueries.scss
@@ -90,6 +90,11 @@
     &__container {
       background-color: vars.$beige-color;
     }
+
+    &__container:hover {
+      transform: scale(1.4);
+    }
+    
     &__img {
       width: 13.37rem;
     }
@@ -98,6 +103,23 @@
       font-size: 0.9rem;
       height: 1.8rem;
       width: 6.9rem;
+    }
+
+    &__btn:hover{
+      box-shadow: 2px 5px 20px 3px rgba(0, 0, 0, 0.5);
+      border-top-left-radius: 5000px;
+      border-top-right-radius: 800px;
+      border-bottom-right-radius: 8000px;
+      border-bottom-left-radius: 800px;
+      transform: scale(1.1);
+      transition:0.5s ease-in;
+      transition: 1s ease-out;
+  
+    }
+
+    &__title:hover {
+      transform: scale(1.1);
+  
     }
   }
 
