--- a/src/components/ServicesPage/stylesMediaQueries.scss
+++ b/src/components/ServicesPage/stylesMediaQueries.scss
@@ -156,7 +156,7 @@
 
 @media screen and (min-width: 1250px){ 
   .services--page {
-    margin: 0rem 0.5rem 1rem 0.5rem;
+    margin: 0rem 1.4rem 1rem 1.4rem;
 
     &__container--btn {
       font-size: 1.4rem;
@@ -165,7 +165,7 @@
     }
 
     &__service {
-      margin: 0rem 0.5rem 1rem 0.5rem;
+      margin: 0rem 0rem 1rem 0rem;
     }
 
     &__service--container {
